# mnpm

./: .gitignore  .lintstagedrc.json  Cargo.toml  README.md  mnpm-arm64  package.json  quick-start.sh  verdaccio.yaml
crates/linker/src/: lib.rs
crates/resolver/: Cargo.toml
crates/test_utils/: Cargo.toml
crates/test_utils/src/: lib.rs  sandbox.rs
examples/playground/: package.json
scripts/: buildBinary.sh
src/: config.rs  dependency_resolver.rs  downloader.rs  http.rs  install_manifest.rs  install_package.rs  lib.rs  linker.rs  main.rs  npm.rs  package_manifest.rs  resolve_version_range.rs
tests/fixtures/basic/: package.json
tests/fixtures/complex/: index.js  package.json
tests/fixtures/playground/: package.json
tests/fixtures/with-peer/: index.js
