[package]
name = "fast-package-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-compression = { version = "0.3.15", features = [
    "gzip",
    "tokio",
    "futures-io",
] }
async-recursion = "1.0.2"
async-trait = "0.1.64"
derive_more = "0.99.17"
flate2 = "1.0.25"
futures = "0.3.25"
futures-util = "0.3.25"
indexmap = { version = "1.9.2", features = ["serde-1"] }
mockall = "0.11.3"
node-semver = "2.1.0"
pin-project = "1.0.12"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91", features = ["preserve_order"] }
tar = "0.4.38"
tempfile = "3.3.0"
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-tar = "0.3.0"
tokio-util = { version = "0.7.7", features = ["compat", "io-util"] }
